# yolov5_ros2

./: README.md  image_capture.py  perception.sh  readme.txt  xiangshu.py
src/yolov5_ros2/: package.xml  setup.py
src/yolov5_ros2/launch/: yolov5_ros2_launch.py
src/yolov5_ros2/yolov5_ros2/: config.yaml  pixPos.py  yolov5_ros2.py  yolov5_ros2_dir.py
src/yolov5_ros2/yolov5_ros2/yolov5/: hubconf.py  requirements.txt
src/yolov5_ros2/yolov5_ros2/yolov5/data/: coco128 .yaml
src/yolov5_ros2/yolov5_ros2/yolov5/utils/: general.py  metrics.py
src/yolov5_ros2_msgs/: CMakeLists.txt  package.xml
src/yolov5_ros2_msgs/msg/: BoundingBox.msg
