<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov5_ros2_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yangkuo@todo.todo">yangkuo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--自定义消息类型需要在package.xml文件中作的设置如下-->
  <!--编译依赖-->
  <build_depend>rosidl_default_generators</build_depend>
  <!--执行依赖-->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!--声明当前保所属的功能包组-->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
